--- a/controllers/controller.template
+++ b/controllers/controller.template
@@ -9,12 +9,14 @@ from tg import expose
 #from tg import predicates
 
 # project specific imports
-from example.lib.base import BaseController
-#from example.model import DBSession, metadata
+from gameon.lib.base import BaseController
+#from gameon.model import DBSession, metadata
 
 
 class SampleController(BaseController):
+    #Uncomment this line if your controller requires an authenticated user
+    #allow_only = predicates.not_anonymous()
     
-    @expose('example.templates.index')
+    @expose('gameon.templates.index')
     def index(self):
         return dict(page='index')
