--- a/model/model.template
+++ b/model/model.template
@@ -7,7 +7,7 @@ from sqlalchemy import Table, ForeignKey, Column
 from sqlalchemy.types import Integer, Unicode
 #from sqlalchemy.orm import relation, backref
 
-from example.model import DeclarativeBase, metadata, DBSession
+from gameon.model import DeclarativeBase, metadata, DBSession
 
 
 class SampleModel(DeclarativeBase):
