--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,8 @@
 eclipse.preferences.version=1
+encoding//controllers/__init__.py=utf-8
 encoding//controllers/root.py=utf-8
+encoding//controllers/secure.py=utf-8
+encoding//controllers/template.py=utf-8
 encoding//lib/app_globals.py=utf-8
 encoding//lib/base.py=utf-8
 encoding//lib/helpers.py=utf-8
@@ -7,4 +10,5 @@ encoding//model/__init__.py=utf-8
 encoding//model/auth.py=utf-8
 encoding//tests/__init__.py=utf-8
 encoding//tests/models/__init__.py=utf-8
+encoding//websetup/bootstrap.py=utf-8
 encoding//websetup/schema.py=utf-8
