Added player management functionality. Updated SQLiteDatastore so it can query all Players (currently no pagination is supported). Added Dice class.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
 		<activity android:name=".NewGameSessionActivity" />
 		<activity android:name=".ApplicationContextProvider" />
+		<activity android:name=".ManagePlayersActivity">
+		</activity>
 		
     </application>
 
