--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,15 +13,16 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name="com.tangly.scorecard.MainActivity" >
+            android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ApplicationContextProvider" />
 		<activity android:name=".NewGameSessionActivity" />
-		<activity android:name=".ApplicationContextProvider" />
-		<activity android:name=".ManagePlayersActivity" />
-		<activity android:name=".ManageDiceActivity" />
+		<activity android:name=".ManagePlayersFragment" />
+		<activity android:name=".ManageDiceFragment" />
 	</application>
 </manifest>
