T7 & T8: Made Add/Edit GS into a DialogFragment with dynamic player add

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
 
         <activity android:name=".ApplicationContextProvider" />
-		<activity android:name=".NewGameSessionActivity" />
+		<activity android:name=".EditGameSessionDialogFragment" />
 		<activity android:name=".ManagePlayersFragment" />
 		<activity android:name=".ManageDiceFragment" />
 	</application>
